dd and use guava lib

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>${mongodb-driver.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
         <!-- Logging dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
