--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <slf4j-api.version>2.0.6</slf4j-api.version>
         <rsocket.version>1.1.3</rsocket.version>
         <gson.version>2.10.1</gson.version>
+        <jib.version>3.3.1</jib.version>
+        <jib.target.namespace>${env.USER}</jib.target.namespace>
     </properties>
 
     <dependencies>
@@ -64,6 +66,22 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>${jib.version}</version>
+                <configuration>
+                    <container>
+                        <ports>
+                            <port>8080</port>
+                            <port>7000</port>
+                        </ports>
+                    </container>
+                    <to>
+                        <image>nexus3.rcsb.org/${jib.target.namespace}/rcsb-idmapper</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
