--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <mongodb-driver.version>4.9.0</mongodb-driver.version>
         <guava.version>31.1-jre</guava.version>
         <rcsb.common.version>2.7.0</rcsb.common.version>
+        <rcsb.idmapper.client.version>0.0.1</rcsb.idmapper.client.version>
         <rcsb.mojave.model.version>1.37.2</rcsb.mojave.model.version>
         <undertow.version>2.3.4.Final</undertow.version>
         <rsocket.version>1.1.3</rsocket.version>
@@ -35,6 +36,13 @@
             <groupId>org.rcsb</groupId>
             <artifactId>rcsb-mojave-model</artifactId>
             <version>${rcsb.mojave.model.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.rcsb</groupId>
+            <artifactId>rcsb-idmapper-client</artifactId>
+            <version>${rcsb.idmapper.client.version}</version>
         </dependency>
 
         <!-- Common repo contains manually curated constants, e.g. DW collection names -->
