--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Model module contains JSON schemas + Java classes generated from schemas:
             POJOs, Enums, field name constants for core and meta schemas -->
         <dependency>
