--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,6 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.3.1</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- Model module contains JSON schemas + Java classes generated from schemas:
             POJOs, Enums, field name constants for core and meta schemas -->
         <dependency>
@@ -43,7 +35,6 @@
             <artifactId>rcsb-mojave-model</artifactId>
             <version>${rcsb.mojave.model.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.rcsb</groupId>
@@ -122,6 +113,27 @@
             <groupId>io.rsocket</groupId>
             <artifactId>rsocket-transport-netty</artifactId>
             <version>${rsocket.version}</version>
+        </dependency>
+
+        <!-- Testing dependencies -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
