Add MONGODB_URI env var

--- a/k8s/helm/templates/deployment.yaml
+++ b/k8s/helm/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{.Values.image.registry}}/{{.Values.image.repository}}:{{.Values.image.tag}}"
           imagePullPolicy: Always
+          env:
+            - name: MONGODB_URI
+              value: "{{ .Values.mongodb_uri }}"
           ports:
             - containerPort: 8080
             - containerPort: 7000
