--- a/k8s/helm/templates/service.yaml
+++ b/k8s/helm/templates/service.yaml
@@ -9,9 +9,9 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: {{ .Values.http_port }}
+      targetPort: {{ .Values.http_port }}
     - name: rsocket
       protocol: TCP
-      port: 9000
-      targetPort: 9000
+      port: {{ .Values.rsocket_port }}
+      targetPort: {{ .Values.rsocket_port }}
