--- a/k8s/helm/templates/ingress.yaml
+++ b/k8s/helm/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
   annotations:
     ingress.class: "haproxy"
+    haproxy.org/path-rewrite: "/"
 #    nginx.ingress.kubernetes.io/rewrite-target: /
 #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" #important
 #    nginx.ingress.kubernetes.io/enable-access-log: "true"
