--- a/k8s/helm/templates/ingress.yaml
+++ b/k8s/helm/templates/ingress.yaml
@@ -23,4 +23,4 @@ spec:
               service:
                 name: {{ .Chart.Name }}-service
                 port:
-                  number: 8080
+                  number: {{ .Values.http_port }}
