--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,8 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <!-- this ensures that the lean .jar is in dist/ and the fat executable one will be in target/ -->
+                            <outputDirectory>dist</outputDirectory>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.rcsb.idmapper.IdMapperServer</mainClass>
