--- a/k8s/helm/templates/deployment.yaml
+++ b/k8s/helm/templates/deployment.yaml
@@ -1,27 +1,101 @@
+{{- range tuple "a" "b" }}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "helm_chart.fullname" $ }}-{{ . }}
+  labels:
+    {{- include "helm_chart.labels" $ | nindent 4 }}
+    rcsb.org/path: {{ . | quote }}
 spec:
-  replicas: {{ .Values.number_of_replicas }}
+  {{- if not $.Values.autoscaling.enabled }}
+  replicas: {{ $.Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      {{- include "helm_chart.selectorLabels" $ | nindent 6 }}
+      rcsb.org/path: {{ . | quote }}
+  strategy:
+    type: {{ $.Values.deploymentStrategy.type }}
+    {{- if eq $.Values.deploymentStrategy.type "RollingUpdate" }}
+    rollingUpdate:
+      maxSurge: {{ $.Values.deploymentStrategy.maxSurge }}
+      maxUnavailable: {{ $.Values.deploymentStrategy.maxUnavailable }}
+    {{- end }}
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}
+        {{- include "helm_chart.selectorLabels" $ | nindent 8 }}
+        rcsb.org/path: {{ . | quote }}
     spec:
+      {{- with $.Values.imagePullSecrets }}
       imagePullSecrets:
-        - name: harbor-docker-registry-conf
+        - name: {{ . }}
+      {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{.Values.image.registry}}/{{.Values.image.repository}}:{{.Values.image.tag}}"
-          imagePullPolicy: Always
-          env:
-            - name: MONGODB_URI
-              value: "{{ .Values.mongodb_uri }}"
+        - name: {{ $.Chart.Name }}
+          securityContext:
+            {{- toYaml $.Values.securityContext | nindent 12 }}
+          image: "{{ $.Values.image.repository }}:{{ $.Values.image.tag | default $.Chart.AppVersion }}"
+          imagePullPolicy: {{ $.Values.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.http_port }}
-            - containerPort: {{ .Values.rsocket_port }}
+            - name: http
+              containerPort: {{ $.Values.service.port }}
+              protocol: TCP
+          {{- if $.Values.livenessProbe.enable }}
+          livenessProbe:
+            initialDelaySeconds: {{ $.Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ $.Values.livenessProbe.periodSeconds }}
+            failureThreshold: {{ $.Values.livenessProbe.failureThreshold }}
+            httpGet:
+              path: {{ $.Values.livenessProbe.http.path }}
+              port: http
+          {{- end }}
+          {{- if $.Values.readinessProbe.enable }}
+          readinessProbe:
+            initialDelaySeconds: {{ $.Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ $.Values.readinessProbe.periodSeconds }}
+            failureThreshold: {{ $.Values.readinessProbe.failureThreshold }}
+            httpGet:
+              path: {{ $.Values.readinessProbe.http.path }}
+              port: http
+          {{- end }}
+          resources:
+            {{- toYaml $.Values.resources | nindent 12 }}
+          {{- if or $.Values.usePersistentVolume $.Values.useSecretsVolume $.Values.useAppConfigs }}
+          volumeMounts:
+            {{- if $.Values.usePersistentVolume }}
+            - mountPath: {{ $.Values.persistentVolumeMountPath }}
+              name: {{ include "helm_chart.pvname" . }}-{{ . }}
+              readOnly: {{ $.Values.persistentVolumeReadOnly }}
+            {{- end }}
+            {{- range $.Values.secretVolumes }}
+            - name: {{ .name | quote }}
+              mountPath: "{{ .mountPath }}/{{ .filename }}"
+              subPath: {{ .filename | quote }}
+            {{- end }}
+            {{- range $.Values.appConfigs }}
+            - name: {{ include "helm_chart.configmapName" $ }}
+              mountPath: "{{ .mountPath }}/{{ .filename }}"
+              subPath: {{ .filename | quote }}
+            {{- end }}
+          {{- end }}
+      {{- if or $.Values.usePersistentVolume $.Values.useSecretsVolume $.Values.useAppConfigs}}
+      volumes:
+        {{- if $.Values.usePersistentVolume }}
+        - name: {{ include "helm_chart.pvname" . }}-{{ . }}
+          persistentVolumeClaim:
+            claimName: {{ include "helm_chart.pvname" . }}-{{ . }}
+        {{- end }}
+        {{- range $.Values.secretVolumes }}
+        - name: {{ .name | quote }}
+          secret:
+            secretName: {{ .secretName | quote }}
+        {{- end }}
+        {{- if $.Values.useAppConfigs }}
+        - name: {{ include "helm_chart.configmapName" . }}
+          configMap:
+            name: {{ include "helm_chart.configmapName" . }}
+        {{- end }}
+      {{- end }}
+{{- end }}
