--- a/k8s/helm/templates/ingress.yaml
+++ b/k8s/helm/templates/ingress.yaml
@@ -1,26 +1,41 @@
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "helm_chart.fullname" . -}}
+{{- $svcPort := .Values.service.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Chart.Name }}-ingress
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "helm_chart.fullname" . }}
+  labels:
+    {{- include "helm_chart.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    ingress.class: "haproxy"
-#    haproxy.org/path-rewrite: "/"
-#    nginx.ingress.kubernetes.io/rewrite-target: /
-#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" #important
-#    nginx.ingress.kubernetes.io/enable-access-log: "true"
-#    nginx.ingress.kubernetes.io/access-log-format: '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"'
-#    nginx.ingress.kubernetes.io/server-snippet: |
-#      access_log /var/log/nginx/west-haproxy.log;
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   rules:
-    - host: {{ .Chart.Name }}.{{ .Release.Namespace }}.k8s.rcsb.org
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
             backend:
               service:
-                name: {{ .Chart.Name }}-service
+                name: {{ $fullName }}
                 port:
-                  number: {{ .Values.http_port }}
+                  number: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
+{{- end }}
