--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -1,9 +1,140 @@
-image:
-  registry: harbor.devops.k8s.rcsb.org
-  repository: yana.rose/rcsb-idmapper
-  tag: latest
+
 
 number_of_replicas: 1
 http_port: 8080
 rsocket_port: 9000
 mongodb_uri: "mongodb://updater:w31teQuerie5@132.249.213.115:27017/dw?authSource=admin&connectTimeoutMS=3000000&socketTimeoutMS=3000000"
+
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+# Number of running Pods managed by this Helm chart's Deployment resource.
+# If using autoscaling, comment or remove this value.
+replicaCount: 1
+
+# Configure a HorizontalPodAutoscaler resource for this Helm chart's Deployment resource.
+# Set autoscaling.enabled to true to enable this functionality. If using this resource,
+# either choose to scale by targetCPUUtilizationPercentage or targetMemoryUtilizationPercentage
+# based on how you want the Deployment to scale, and comment or remove the other value option.
+autoscaling:
+  enabled: false
+
+# The Docker image reference which this Helm chart will run.
+# TODO: Ensure the repository/image name is correct.
+image:
+  repository: "harbor.devops.k8s.rcsb.org/rcsb/rcsb-idmapper"
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "production"
+
+# externalSecret defines values for the ExternalSecret resource if your application needs to pull values
+# from an external Vault service.
+# TODO: Review externalSecret values as required.
+externalSecret:
+  enabled: true
+  secretStoreRefName: "rcsb-vault"
+  targets:
+    - secretName: rcsb-idmapper-a-env-vars
+      data:
+        - secretKey: mongodb_uri
+          remoteRef:
+            key: parks/production
+            property: idmapper.a.env
+    - secretName: rcsb-idmapper-b-env-vars
+      data:
+        - secretKey: mongodb_uri
+          remoteRef:
+            key: parks/production
+            property: idmapper.b.env
+
+# imagePullSecrets is the Secret resource which contains the credentials to connect to Docker
+# to pull images from private Harbor projects. If the image for your Helm chart is not from a
+# private Harbor project, you can exclude this value. Otherwise, leave this value as is.
+imagePullSecrets: "harbor-docker-registry-conf"
+
+deploymentStrategy:
+  #https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
+  #Type is either RollingUpdate or Recreate
+  type: "RollingUpdate"
+  #For rolling update, what percentage of total pods can be created above desired amount
+  maxSurge: 25%
+  #For rolling update, what percentage of total pods can be brought down to update
+  maxUnavailable: 25%
+
+# securityContext sets the container security values of the Pod. These default values are the recommended
+# values for all applications. Adjust as needed for your application purposes, but be aware of the security
+# implications from these changes.
+securityContext:
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  runAsUser: 1000
+
+# Define container liveness and readiness checks
+# A Pod is considered "live" when it is able to respond to client requests.
+# A Pod is considered "ready" when it has completed initialization and should be one of the backends for a K8s Service resource.
+# TODO: Enable/disable probes as required, and set appropriate values.
+livenessProbe:
+  enable: true
+  initialDelaySeconds: 300
+  periodSeconds: 30
+  failureThreshold: 6
+  http:
+    path: /
+readinessProbe:
+  enable: true
+  initialDelaySeconds: 300
+  periodSeconds: 30
+  failureThreshold: 6
+  http:
+    path: /
+
+# service declares the type of Service resource to be created, as well as the target port of the Pod to send requests.
+service:
+  type: ClusterIP
+  port: 8080
+
+# ingress declares the Ingress resource to be created and allow access to the service from the external internet.
+# Set ingress.enabled to true to create this Ingress resource. Double-check the host values for your application.
+ingress:
+  enabled: true
+  className: "haproxy"
+  annotations:
+    cert-manager.io/cluster-issuer: rutgers-acme
+  kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: idmapper.k8s.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+    - host: idmapper.east.k8s.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+    - host: idmapper.west.k8s.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls:
+    - secretName: rcsb-idmapper-tls
+      hosts:
+        - idmapper.k8s.rcsb.org
+        - idmapper.east.k8s.rcsb.org
+        - idmapper.west.k8s.rcsb.org
+
+# Define resource limits for your application. Especially important if you enable autoscaling for this Helm chart.
+# Deploy without limits first to test the application performance, then tune afterwards to ensure that autoscaling
+# will work as expected.
+# TODO: Review resource limit values.
+resources: {}
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+#   memory: 128Mi
+
+# usePersistentVolume if your application requires a persistent volume resource for data storage.
+usePersistentVolume: false
