--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -95,25 +95,32 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
   kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: idmapper.k8s.rcsb.org
+  hostsA:
+    - host: idmapper-a.east.k8s.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-    - host: idmapper.east.k8s.rcsb.org
+    - host: idmapper-a.west.k8s.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-    - host: idmapper.west.k8s.rcsb.org
+  hostsB:
+    - host: idmapper-b.east.k8s.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+    - host: idmapper-b.west.k8s.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    - secretName: rcsb-idmapper-tls
-      hosts:
-        - idmapper.k8s.rcsb.org
-        - idmapper.east.k8s.rcsb.org
-        - idmapper.west.k8s.rcsb.org
+    secretName: rcsb-idmapper-tls
+    hostsA:
+      - idmapper-a.east.k8s.rcsb.org
+      - idmapper-a.west.k8s.rcsb.org
+    hostsB:
+      - idmapper-b.east.k8s.rcsb.org
+      - idmapper-b.west.k8s.rcsb.org
 
 # Define resource limits for your application. Especially important if you enable autoscaling for this Helm chart.
 # Deploy without limits first to test the application performance, then tune afterwards to ensure that autoscaling
