--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -111,6 +111,10 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+    - host: idmapper-a.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
   hostsB:
     - host: idmapper-b.east.k8s.rcsb.org
       paths:
@@ -120,14 +124,20 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+    - host: idmapper-b.rcsb.org
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
   tls:
     secretName: rcsb-idmapper-tls
     hostsA:
       - idmapper-a.east.k8s.rcsb.org
       - idmapper-a.west.k8s.rcsb.org
+      - idmapper-a.rcsb.org
     hostsB:
       - idmapper-b.east.k8s.rcsb.org
       - idmapper-b.west.k8s.rcsb.org
+      - idmapper-b.rcsb.org
 
 # Define resource limits for your application. Especially important if you enable autoscaling for this Helm chart.
 # Deploy without limits first to test the application performance, then tune afterwards to ensure that autoscaling
