--- a/k8s/helm/templates/configmap.yaml
+++ b/k8s/helm/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.useAppConfigs }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,8 +6,7 @@ metadata:
   labels:
     {{- include "helm_chart.labels" . | nindent 4 }}
 data:
-{{- range $file, $_ := .Values.appConfigs }}
-  {{ $file }}: |
-{{ $_.value | indent 4 }}
+{{- range $path, $config := .Values.idMapperAppProperties }}
+  {{ $path }}: |
+{{ $config | indent 4 }}
 {{- end -}}
-{{- end }}
