--- a/k8s/helm/templates/externalSecrets.yaml
+++ b/k8s/helm/templates/externalSecrets.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.externalSecret.enabled -}}
+---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -6,10 +6,18 @@ metadata:
 spec:
   refreshInterval: 15s
   secretStoreRef:
-    name: {{ .Values.externalSecret.secretStoreRefName }}
+    name: rcsb-vault
     kind: ClusterSecretStore
   target:
-    name: {{ .Values.externalSecret.target.secretName }}
+    # note this was before rcsb-idmapper-env-vars
+    name: {{ include "helm_chart.fullname" . }}-secret
   data:
-    {{- toYaml .Values.externalSecret.data | nindent 4 }}
-{{- end }}
+    - secretKey: mongodb_uri_a
+      remoteRef:
+        key: parks/production
+        property: idmapper.a.env
+    - secretKey: mongodb_uri_b
+      remoteRef:
+        key: parks/production
+        property: idmapper.b.env
+
