ci: disable ingress in defaults

--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -83,7 +83,7 @@ service:
 # ingress declares the Ingress resource to be created and allow access to the service from the external internet.
 # Set ingress.enabled to true to create this Ingress resource. Double-check the host values for your application.
 ingress:
-  enabled: true
+  enabled: false
   className: "haproxy"
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
