ci: new env vars for mongo credentials, coming from secrets

--- a/k8s/helm/templates/deployment.yaml
+++ b/k8s/helm/templates/deployment.yaml
@@ -85,4 +85,14 @@ spec:
           env:
             - name: MONGODB_URI
               value: {{ index $.Values.idMapperAppProperties.mongoDbUri . }}
+            - name: MONGODB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "helm_chart.fullname" $ }}-secret
+                  key: mongodb_user
+            - name: MONGODB_PWD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "helm_chart.fullname" $ }}-secret
+                  key: mongodb_pwd
 {{- end }}
