--- a/k8s/helm/templates/externalSecrets.yaml
+++ b/k8s/helm/templates/externalSecrets.yaml
@@ -12,12 +12,14 @@ spec:
     # note this was before rcsb-idmapper-env-vars
     name: {{ include "helm_chart.fullname" . }}-secret
   data:
-    - secretKey: mongodb_uri_a
+    # TODO switch to use mongo_databases/admin_accounts (see yosemite) when we have in-k8s DW
+    - secretKey: mongodb_user
       remoteRef:
         key: parks/production
-        property: idmapper.a.env
-    - secretKey: mongodb_uri_b
+        property: idmapper.mongodb.user
+    - secretKey: mongodb_pwd
       remoteRef:
         key: parks/production
-        property: idmapper.b.env
+        property: idmapper.mongodb.pwd
+
 
